# mission_control_api_assignment

./: .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  schema.yml  setup.cfg
infra/: .expample-env  docker-compose.yaml
space_stations/: asgi.py  settings.py  urls.py  wsgi.py
space_stations/settings/: base.py  local.py  production.py
stations/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
stations/migrations/: 0001_initial.py  0002_alter_coordinates_station_alter_directive_station.py
tests/: conftest.py  test_station_state.py  test_stations.py
tests/fixtures/: fixture_data.py  fixture_user.py  test_admin_site.py
